--- a/package.json
+++ b/package.json
@@ -36,10 +36,12 @@
     "eslint-plugin-promise": "^6.0.1",
     "husky": "^8.0.1",
     "lint-staged": "^13.0.3",
+    "prisma": "^4.4.0",
     "ts-node-dev": "^2.0.0",
     "typescript": "^4.8.4"
   },
   "dependencies": {
+    "@prisma/client": "^4.4.0",
     "express": "^4.18.1"
   },
   "config": {
