--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "src/server.js",
   "scripts": {
     "dev": "ts-node-dev --respawn --transpile-only src/server.ts",
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "vitest",
     "lint": "eslint ./src --fix",
     "commit": "git-cz",
     "prepare": "husky install"
@@ -38,7 +38,8 @@
     "lint-staged": "^13.0.3",
     "prisma": "^4.4.0",
     "ts-node-dev": "^2.0.0",
-    "typescript": "^4.8.4"
+    "typescript": "^4.8.4",
+    "vitest": "^0.24.0"
   },
   "dependencies": {
     "@prisma/client": "^4.4.0",
