--- a/package.json
+++ b/package.json
@@ -24,7 +24,9 @@
   "devDependencies": {
     "@commitlint/cli": "^17.1.2",
     "@commitlint/config-conventional": "^17.1.0",
+    "@types/bcrypt": "^5.0.0",
     "@types/express": "^4.17.14",
+    "@types/jsonwebtoken": "^8.5.9",
     "@types/node": "^18.8.3",
     "@typescript-eslint/eslint-plugin": "^5.39.0",
     "commitizen": "^4.2.5",
@@ -43,7 +45,9 @@
   },
   "dependencies": {
     "@prisma/client": "^4.4.0",
-    "express": "^4.18.1"
+    "bcrypt": "^5.1.0",
+    "express": "^4.18.1",
+    "jsonwebtoken": "^8.5.1"
   },
   "config": {
     "commitizen": {
