--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "commit": "git-cz",
     "prepare": "husky install",
     "build": "npx tsc",
-    "start": "node dist/src/server.js"
+    "start": "node dist/src/server.js",
+    "heroku-postbuild": "npx prisma migrate deploy"
   },
   "repository": {
     "type": "git",
